[JEWEL-1346] Force Auto Correct + Enable Documentation Rules
closes https://github.com/JetBrains/intellij-community/pull/3553

GitOrigin-RevId: e2b25d41cd35c3e99a3e283b16de93e55c5951d6